# advent_2025

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  watcher.py  wip.py
01/: part1.py  part2.py
02/: part1.py  part2.py
03/: part1.py  part2.py
04/: part1.py  part2.py
05/: part1.py  part2.py
06/: part1.py  part2.py
07/: part1.py  part2.py
08/: part1.py  part2.py
09/: part1.py  part2.ipynb  part2.py
10/: part1.py
11/: part1.py  part2.py
