[project]
name = "advent-2025"
version = "0.1.0"
description = "My solutions for advent of code 2025"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "icecream>=2.1.8",
    "jupyterlab>=4.5.0",
    "jupyterlab-ariakedark-theme>=0.2.3",
    "jupyterlab-git>=0.51.2",
    "jupyterlab-nord-theme>=0.1.1",
    "jupyterlab-vim>=4.1.4",
    "nodejs-wheel>=24.11.1",
    "pandas>=2.3.3",
    "parse>=1.20.2",
    "pre-commit>=4.5.0",
    "pre-commit-uv>=4.2.0",
    "pytest>=9.0.1",
    "stellars-jupyterlab-darcula-theme>=1.0.43",
    "watchfiles>=1.1.1",
]

[tool.uv]
    reinstall-package = ["advent_2025"]

[tool.ruff]
    fix = true
    target-version = "py313"

[tool.ruff.lint]
    select = ["E", "F", "I", "UP", "ERA", "C", "RUF", "PLC", "PLE", "PLR", "PLW", "A",  "RET", ]
    ignore = [
        "PLR2004", # there are a lot of "magic numbers" in aoc
        "E501", # line too long
    ]

[tool.ruff.lint.per-file-ignores]
    "wip.py" = [ "F401" ]
